--- a/apps/docs/docs/getting_started/core_concepts.mdx
+++ b/apps/docs/docs/getting_started/core_concepts.mdx
@@ -3,6 +3,8 @@ id: core_concepts
 title: Core Concepts
 ---
 
+<iframe id="kmsembed-0_q6tfn51u" width="100%" height="402" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_q6tfn51u/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Core Concepts"></iframe>
+
 To effectively understand and utilize KlickerUZH, it is important to grasp the four key concepts that form the foundation of the application. These concepts are as follows:
 
 1. **Questions**: Questions are the primary building block of the application. All of the activities provided by KlickerUZH utilize questions that are managed in the question pool. Lecturers can pose questions to the participants and participants can respond using their devices to practice content.
