--- a/apps/docs/docs/tutorials/question_management.mdx
+++ b/apps/docs/docs/tutorials/question_management.mdx
@@ -4,12 +4,16 @@ title: Question Management
 ---
 
 ## What is a question?
+
 Questions serve as the fundamental building blocks of KlickerUZH. The question pool builds the home screen of KlickerUZH, providing a central hub for creating and editing questions. To gain a basic understanding of the role of questions in KlickerUZH, please refer to the Core Concept - Questions and Use case section.
 
-1. There are 5 different question types: Single Choice (SC), Multiple Choice (MC), Essay/Free Text(FT), Numerical Response (NR), and Kprim.
+1. There are 5 different question types: Single Choice (SC), Multiple Choice (MC), Essay/Free Text(FT), Numerical Response (NR), and Kprim (KP).
 2. A pedagogical reflection should precede the creation of questions, as different question types may be more appropriate for different learning settings or learning goals. For more pedagogical considerations, refer to use cases or to: https://teachingtools.uzh.ch/en/tools/multiple-choice-co-aufgaben-erstellen
 
+
 ## How can I create a question?
+
+VIDEO TBD
 
 1. The question title is visible to participants and should offer an idea about the subject of the question.
 2. Questions can be valued weighted differently using a multiplier. A multiplier awards a correct answer with either x1, x2, x3, or x4 points, if the question is applied within a gamified context.
@@ -18,3 +22,16 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
 5. Answer-feedbacks (Antwort-Feedbacks) can only be entered for choice-based question types (SC/MC/Kprim). The difference between answer-feedbacks and a generic explanation (Erklärung) is that with answer-feedbacks, each answer option can receive specific feedback to enhance the learning effect.
 6. For Numerical Questions, hints regarding the range of the number can be provided under Options. Additionally, the precision option allows specifying the desired number of decimal places, including whether rounding should be applied.
 7. The preview section demonstrates how the questions will appear to participants. Choice-based questions can be displayed either in a list format or as a grid.
+
+
+## How can I manage created questions (e.g., edit, search, sort)?
+
+VIDEO TBD
+
+Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
+
+1. Questions can be grouped based on tags and It is possible to search for question titles in the search field.
+2. Questions can be listed by creation date or by title (alphabetically, from  a -> z or from z -> a)
+3. Questions can be edited, duplicated (and subsequently edited), and deleted. However, any edits made to questions will not affect their status in ongoing implementations within various learning activities. Deleted questions cannot be restored, but they will persist within existing sessions.
+4. To keep the question pool organized, there is the option to archive questions and retrieve them from the archive at a later time.
+5. Questions are the basic building blockof of the 4 learning activities. Most questions can be used in any of the 4 activities, but some restrictions apply. For more details about embedding questions into different learning activities, please refer to the tutorial/workflow section Learning Activities.
