basic contents and docs structure

--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -1,4 +1,47 @@
 ---
-id: course_management
 title: Course Management
 ---
+
+## What are courses?
+
+IMG
+
+Courses serve as a framework within KlickerUZH, facilitating the integration of learning activities into a structured lecture format. They enable lecturers to effectively manage various activities and challenges over a specific period, whether it's a semester or another defined timeframe.
+
+## How can I create a course?
+
+VIDEO
+
+1. Starting from the Courses page, you can create a new course. The Course Name and Display Name can be the same or different. While the Course Name is only visible internally and serves for identification purposes, the Display name is what participants will see . If the course is associated with a lecture and/or a course in an LMS, it is recommended to choose the same name.
+
+2. The Description field is visible to participants and can contain information such as course objectives. An overview of all activities associated with the course throughout its duration can also be embedded using an image, helping students to know what to expect and where they can collect points
+
+3. The course color can be adjusted to match the color used in the Learning Management System (LMS), if the course is utilized in an LMS.
+
+4. Gamification is enabled by default. When gamification is activated, participants' collected points can be displayed on the course leaderboard.
+
+After creating a course, you will be directed to the course overview page.
+
+To access the course overview, you can navigate to the Courses section and select the desired course. From the course overview, you can start learning activities, access ongoing Live Quizzes, and review evaluations of past Live Quizzes. You can also generate access links for specific Practice Quizzes and Microlearning.
+
+For more information on integrating learning activities into courses, refer to the tutorials for live quizzes and live Q&A, as well as Microlearning and Practice Quizzes.
+
+
+## How can I join a course as a participant?
+
+VIDEO
+
+There are three ways to grant participants access to a course. By clicking on "Join Course" in the top right corner, the options for joining can be accessed:
+
+1. Course Link: Participants can access the course by clicking on "Join Course" located at the top right corner.
+
+2. PIN: Participants can enter a course by entering the PIN code provided.
+
+3. QR Code: To share the QR code, you can either click on "Present QR code" and copy the link (recommended) or take a screenshot of the QR code and share it.
+
+Participants also have the option to participate in activities anonymously without logging in.
+
+
+## How can I integrate a course with my learning management system (e.g., OLAT)?
+
+COMING SOON
