--- a/apps/docs/docs/tutorials/live_qa.mdx
+++ b/apps/docs/docs/tutorials/live_qa.mdx
@@ -1,4 +1,21 @@
 ---
-id: live_qa
 title: Activity - Live Q&A
 ---
+
+## What is Live Q&A?
+
+IMG
+
+Live Quizzes in KlickerUZH can be coupled with a Live Q&A that enables students to ask questions anonymously. Lecturers can answer either in writing or orally. This facilitates the immediate clarification of questions and fosters interaction between lecturer and students in the classroom.
+
+
+## How can I activate and use Live Q&A?
+
+VIDEO
+
+A Live Q&A is embedded in the Live Quiz and can be activated during a Live Quiz session. For more details on the Live Quiz, review the dedicated section (verlinken).
+
+1. Activate Live Q&A: As soon as you activate a question block (displayed in green), the Live Q&A can be activated.
+2. Manage questions: By clicking on the eye symbol, you can make the question visible for all the participants. The question can then not only be seen by others, but also be upvoted. Furthermore, you can sort the incoming questions or delete them.
+3. Answer questions: By clicking on the down arrow you can answer the question and pin it, if this question is important and should be highlighted, or you can mark it as resolved .
+
