--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -1,4 +1,57 @@
 ---
-id: practice_quiz
 title: Activity - Practice Quiz
 ---
+
+## What is a Practice Quiz?
+
+IMG
+
+The Practice Quiz activity consists of longer question sets that specifically target modules or topics and that can be embedded within Learning Management Systems (LMS) like OpenOLAT. These learning activities have no restrictions on when or how often they can be completed. Furthermore, the questions within each set can be shown in sequence, shuffled, or ordered based on the date of the last response. When using gamification, the time frame in which points can be collected from responding to the questions can be customized to, e.g., once a week or day.
+
+
+## How can I create a Practice Quiz?
+
+VIDEO
+
+**Add a description:**
+
+1. Name: The name of the Practice Quiz allows the user to distinguish the particular session from others. It is therefore only visible to the users themselves.
+2. Display Name: This name will be shown to the participants while the Practice Quiz is being performed.
+3. Description: A description of the Practice Quiz can optionally be added and will be displayed to the participants at the beginning of the session.
+
+IMG
+
+**Adjust the settings:**
+
+4. Course: In this field, the Practice Quiz has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the Course Management tutorial (verlinken).
+5. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated .
+6. Repetition interval: Practice Quizzes are characterized by their spaced repetition. Here, the period  is chosen after which the participants can repeat the Quiz.
+7. Order: The order in which the questions are to be solved by the participants is selected here. It is possible to choose between the following setups: Last response first, sequential or shuffled.
+
+IMG
+
+**Choose your questions:**
+
+For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based and numerical questions can be implemented (no free-text). If you need help with creating questions, please review the Question Management tutorial (verlinken).
+
+8. Questions: The desired question can be added to the session by simply dragging the question onto the plus sign.
+9. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
+
+IMG
+
+**End of preparation:**
+
+10.	With a click on Create your first Practice Quiz is prepared!
+
+
+## How can I publish a Practice Quiz and make it accessible to participants?
+
+VIDEO
+
+1. After you create a Practice Quiz, you can find it under Courses. Then select the course to which you added the session.
+2. In the course you have multiple options. You can...
+    - ...copy the access link and provide it to your participants.
+    - ...edit your session before publishing it.
+    - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
+    - ...delete your session.
+3. After publishing your session, your participants can see the session in their account by joining the course. In the app, the Practice Quiz is displayed to the participants as shown in the screenshots below.
