--- a/apps/docs/docs/tutorials/question_management.mdx
+++ b/apps/docs/docs/tutorials/question_management.mdx
@@ -1,9 +1,10 @@
 ---
-id: question_management
 title: Question Management
 ---
 
 ## What is a question?
+
+IMG
 
 Questions serve as the fundamental building blocks of KlickerUZH. The question pool builds the home screen of KlickerUZH, providing a central hub for creating and editing questions. To gain a basic understanding of the role of questions in KlickerUZH, please refer to the Core Concept - Questions and Use case section.
 
@@ -13,7 +14,7 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
 
 ## How can I create a question?
 
-VIDEO TBD
+VIDEO
 
 1. The question title is visible to participants and should offer an idea about the subject of the question.
 2. Questions can be valued weighted differently using a multiplier. A multiplier awards a correct answer with either x1, x2, x3, or x4 points, if the question is applied within a gamified context.
@@ -26,7 +27,7 @@ VIDEO TBD
 
 ## How can I manage created questions (e.g., edit, search, sort)?
 
-VIDEO TBD
+VIDEO
 
 Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
 
