add example video

--- a/apps/docs/docs/tutorials/live_quiz.mdx
+++ b/apps/docs/docs/tutorials/live_quiz.mdx
@@ -11,7 +11,7 @@ Live Quizzes in KlickerUZH involve real-time interaction during lectures to fost
 
 ## How can I create a Live Quiz?
 
-VIDEO
+<iframe src="https://uzh.sharepoint.com/sites/BFTCITUX-Shared-KlickerUZH/_layouts/15/embed.aspx?UniqueId=bf16f779-5b9d-4b11-8f21-a51e080c0eec&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="LiveQuiz_Preparation.mp4"></iframe>
 
 **Add a description:**
 
