add more of the existing contents

--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -4,7 +4,7 @@ title: Activity - Practice Quiz
 
 ## What is a Practice Quiz?
 
-IMG
+![Practice Quiz](/img_v3/practice_quiz.png)
 
 The Practice Quiz activity consists of longer question sets that specifically target modules or topics and that can be embedded within Learning Management Systems (LMS) like OpenOLAT. These learning activities have no restrictions on when or how often they can be completed. Furthermore, the questions within each set can be shown in sequence, shuffled, or ordered based on the date of the last response. When using gamification, the time frame in which points can be collected from responding to the questions can be customized to, e.g., once a week or day.
 
