--- a/apps/docs/docs/tutorials/question_management.mdx
+++ b/apps/docs/docs/tutorials/question_management.mdx
@@ -4,7 +4,7 @@ title: Question Management
 
 ## What is a question?
 
-IMG
+![Question Editor](/img_v3/question.png)
 
 Questions serve as the fundamental building blocks of KlickerUZH. The question pool builds the home screen of KlickerUZH, providing a central hub for creating and editing questions. To gain a basic understanding of the role of questions in KlickerUZH, please refer to the Core Concept - Questions and Use case section.
 
@@ -14,7 +14,7 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
 
 ## How can I create a question?
 
-VIDEO
+<iframe id="kmsembed-0_c4db0dw8" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_c4db0dw8/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Question Preparation"></iframe>
 
 1. The question title is visible to participants and should offer an idea about the subject of the question.
 2. Questions can be valued weighted differently using a multiplier. A multiplier awards a correct answer with either x1, x2, x3, or x4 points, if the question is applied within a gamified context.
@@ -27,7 +27,7 @@ VIDEO
 
 ## How can I manage created questions (e.g., edit, search, sort)?
 
-VIDEO
+<iframe id="kmsembed-0_gm5oobzo" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_gm5oobzo/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Question Management"></iframe>
 
 Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
 
