--- a/apps/docs/docs/getting_started/core_concepts.mdx
+++ b/apps/docs/docs/getting_started/core_concepts.mdx
@@ -2,7 +2,7 @@
 title: Core Concepts
 ---
 
-<iframe id="kmsembed-0_q6tfn51u" width="100%" height="402" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_q6tfn51u/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Core Concepts"></iframe>
+<iframe id="kmsembed-0_ugtkafd3" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_ugtkafd3/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH_CoreConcepts_AudioEnhanced"></iframe>
 
 To effectively understand and utilize KlickerUZH, it is important to grasp the four key concepts that form the foundation of the application. These concepts are as follows:
 
