--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -4,13 +4,13 @@ title: Course Management
 
 ## What are courses?
 
-IMG
+![Course Overview](/img_v3/course.png)
 
 Courses serve as a framework within KlickerUZH, facilitating the integration of learning activities into a structured lecture format. They enable lecturers to effectively manage various activities and challenges over a specific period, whether it's a semester or another defined timeframe.
 
 ## How can I create a course?
 
-VIDEO
+<iframe id="kmsembed-0_5uymof4i" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5uymof4i/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Course Preparation"></iframe>
 
 1. Starting from the Courses page, you can create a new course. The Course Name and Display Name can be the same or different. While the Course Name is only visible internally and serves for identification purposes, the Display name is what participants will see . If the course is associated with a lecture and/or a course in an LMS, it is recommended to choose the same name.
 
