--- a/apps/docs/docs/tutorials/live_qa.mdx
+++ b/apps/docs/docs/tutorials/live_qa.mdx
@@ -11,11 +11,10 @@ Live Quizzes in KlickerUZH can be coupled with a Live Q&A that enables students 
 
 ## How can I activate and use Live Q&A?
 
-VIDEO
+<iframe id="kmsembed-0_llek0mci" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_llek0mci/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Live Q&A"></iframe>
 
 A Live Q&A is embedded in the Live Quiz and can be activated during a Live Quiz session. For more details on the Live Quiz, review the dedicated section (verlinken).
 
 1. Activate Live Q&A: As soon as you activate a question block (displayed in green), the Live Q&A can be activated.
 2. Manage questions: By clicking on the eye symbol, you can make the question visible for all the participants. The question can then not only be seen by others, but also be upvoted. Furthermore, you can sort the incoming questions or delete them.
 3. Answer questions: By clicking on the down arrow you can answer the question and pin it, if this question is important and should be highlighted, or you can mark it as resolved .
-
