--- a/apps/docs/docs/tutorials/live_quiz.mdx
+++ b/apps/docs/docs/tutorials/live_quiz.mdx
@@ -4,14 +4,14 @@ title: Activity - Live Quiz
 
 ## What is a Live Quiz?
 
-IMG
+![Live Quiz Evaluation](/img_v3/quiz_evaluation.png)
 
 Live Quizzes in KlickerUZH involve real-time interaction during lectures to foster engagement between the lecturer and students. Multiple question blocks are activated at different intervals, allowing students to provide answers in real-time. Lecturers can view aggregated and anonymous student responses on the dashboard.
 
 
 ## How can I create a Live Quiz?
 
-<iframe src="https://uzh.sharepoint.com/sites/BFTCITUX-Shared-KlickerUZH/_layouts/15/embed.aspx?UniqueId=bf16f779-5b9d-4b11-8f21-a51e080c0eec&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="LiveQuiz_Preparation.mp4"></iframe>
+<iframe id="kmsembed-0_bfzstjdf" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_bfzstjdf/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Live Quiz Preparation"></iframe>
 
 **Add a description:**
 
@@ -47,7 +47,7 @@ IMG
 
 ## How can I execute a Live Quiz?
 
-VIDEO
+<iframe id="kmsembed-0_apxhu5zk" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_apxhu5zk/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Live Quiz Execution"></iframe>
 
 The prepared Live Quiz can be found under Sessions. Here it is possible to edit the session before it is started. Once Start Session is clicked, the session can no longer be edited. Also note that once Live Quizzes are closed, they cannot be reopened.
 
