--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -29,7 +29,7 @@ For more information on integrating learning activities into courses, refer to t
 
 ## How can I join a course as a participant?
 
-VIDEO
+<iframe id="kmsembed-0_12mphyu5" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_12mphyu5/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Join Course"></iframe>
 
 There are three ways to grant participants access to a course. By clicking on "Join Course" in the top right corner, the options for joining can be accessed:
 
