--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -11,7 +11,7 @@ Microlearning offers short learning units with a limited number of questions, pu
 
 ## How can I create a Microlearning?
 
-VIDEO
+<iframe id="kmsembed-0_wd8q4cfm" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_wd8q4cfm/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Prepare Microlearning"></iframe>
 
 **Add a description:**
 
@@ -43,7 +43,7 @@ For this step, existing questions are required. Note that for Microlearning and 
 
 ## How can I publish a Microlearning and make it accessible to participants?
 
-IMG
+<iframe id="kmsembed-0_5wx8eehl" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5wx8eehl/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Publish Microlearning"></iframe>
 
 1. After you create a Microlearning session, you can find it under Courses. Then select the course to which you added the session.
 2. In the course you have multiple options. You can...
