--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -11,7 +11,7 @@ The Practice Quiz activity consists of longer question sets that specifically ta
 
 ## How can I create a Practice Quiz?
 
-VIDEO
+<iframe id="kmsembed-0_6ewauv5u" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_6ewauv5u/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Prepare Practice Quiz"></iframe>
 
 **Add a description:**
 
@@ -46,7 +46,7 @@ IMG
 
 ## How can I publish a Practice Quiz and make it accessible to participants?
 
-VIDEO
+<iframe id="kmsembed-0_afublry9" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_afublry9/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Publish Practice Quiz"></iframe>
 
 1. After you create a Practice Quiz, you can find it under Courses. Then select the course to which you added the session.
 2. In the course you have multiple options. You can...
