update hero, remove second background ToC entry

--- a/apps/docs/docs/tutorials/live_quiz.mdx
+++ b/apps/docs/docs/tutorials/live_quiz.mdx
@@ -19,15 +19,11 @@ Live Quizzes in KlickerUZH involve real-time interaction during lectures to fost
 2. Display Name: This name will be shown to the participants while the Live Quiz is being performed.
 3. Description: A description of the Live Quiz can optionally be added and will be displayed to the participants at the beginning of the session.
 
-IMG
-
 **Adjust the settings:**
 
 4. Course: In this field, the Live Q&A can optionally be assigned to a course. If you wish to do this and need help creating a course, please review the Course Management tutorial (verlinken).
 5. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated.
 6. Gamification: The slider can be used to decide whether gamification should be applied to the respective Live Quiz. Note that gamified Live Quizzes should only be used in gamified courses.
-
-IMG
 
 **Create blocks using existing questions:**
 
@@ -37,8 +33,6 @@ For this step, existing questions are required. If you need help with creating q
 7.1. Drag: The desired question can be added to a specific block by simply dragging the question onto the plus sign below the desired block.
 7.2. Select: It is also possible to select one or more questions and insert them into the desired block by clicking on the yellow boxes that appear after selecting the questions.
 In this way questions can be grouped and/or stacked for sequential presentation.
-
-IMG
 
 **End of preparation:**
 
@@ -64,21 +58,17 @@ Once the session is stared, there are the following steps to take:
 
 ## How can I edit a Live Quiz?
 
-IMG
-
 It is possible to edit a Live Quiz only before it has been started. Once Start Session is clicked, the session can no longer be edited.
 
 
 ## How can participants join a Live Quiz?
 
-VIDEO
+<iframe id="kmsembed-0_l513w0kb" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_l513w0kb/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Join Live Quiz"></iframe>
 
 Once the session is started, click on the QR code button in the top bar of the session page. You can send the direct link to your participants or show them the QR code (Present QR code displays the QR code on a separate page).
 
 
 ## What should I look out for when creating a gamified Live Quiz?
-
-IMG
 
 If the quiz is part of a gamified course, participants appear on the leaderboard of the live quiz only if they are already participating in the course leaderboard. If gamification is used in the live quiz, the quiz needs to be ended in order for the participants’ points to be added in the course leaderboard.
 
