docs: fix broken links

--- a/apps/docs/docs/privacy_policy.mdx
+++ b/apps/docs/docs/privacy_policy.mdx
@@ -4,7 +4,7 @@ title: Privacy policy
 
 **Updated on August 26, 2023**
 
-> This is a translation of the [original statement in German](/next/datenschutz). The translation is provided for information purposes only and has no legal bearing. Only the German document is legally binding.
+> This is a translation of the [original statement in German](/datenschutz). The translation is provided for information purposes only and has no legal bearing. Only the German document is legally binding.
 
 Welcome to www.klicker.uzh.ch "KLICKERUZH", the Classroom Response System of the Teaching Center of the Institute of Banking and Finance at the University of Zurich (UZH). UZH takes data protection very seriously, and as part of UZH, so do we.
 
