--- a/apps/docs/docs/getting_started/core_concepts.mdx
+++ b/apps/docs/docs/getting_started/core_concepts.mdx
@@ -8,7 +8,7 @@ To effectively understand and utilize KlickerUZH, it is important to grasp the f
 
 1. **Questions**: Questions are the primary building block of the application. All of the activities provided by KlickerUZH utilize questions that are managed in the question pool. Lecturers can pose questions to the participants and participants can respond using their devices to practice content.
 
-2. **Learning Activities**: Lecturers  can choose between five different types      of activities that suit specific educational objectives and adapt to various teaching methods during live lectures (synchronous learning) or outside of the traditional lecture frame (asynchronous learning). The activities are: Live Quiz, Live Q&A, Microlearning, Practice Quiz and Group Activity.
+2. **Learning Activities**: Lecturers  can choose between five different types of activities that suit specific educational objectives and adapt to various teaching methods during live lectures (synchronous learning) or outside of the traditional lecture frame (asynchronous learning). The activities are: Live Quiz, Live Q&A, Microlearning, Practice Quiz and Group Activity.
 
 3. **Courses**: Courses help to implement KlickerUZH Learning Activities into a lecture structure, enabling lecturers to manage different activities and challenges effectively throughout a semester or over a certain period of time.
 
@@ -20,7 +20,7 @@ By understanding these four key concepts - Questions, Learning Activities, Cours
 ## Questions
 Questions are the foundational component of KlickerUZH as they form the base for student interaction. Lecturers implement questions that they want to ask their students live in a lecture or as a repetition later on. Students/Participants can respond to questions using their personal devices, such as mobile phones, tablets or laptops.  There are five question types available: Single Choice (SC), Multiple Choice (MC), Kprim (KPRIM), Free Text (FT), and Numerical Response (NR).
 
-It is recommended to align the choice of question types with specific learning goals. For example, if you want to check whether the students have understood the previously learned knowledge, single-choice or Kprim questions with a clear answer are suitable (Example: What is the definition of the Sharpe ratio?). To activate students’ engagement, questions can be asked without a clear answer. This makes students think about the discussed topic  being covered and gets them directly involved (Example: Where will the SMI be at the end of 2025?). For more didactical information please consult the [use cases](a) or [UZH Teaching Tools](a).
+It is recommended to align the choice of question types with specific learning goals. For example, if you want to check whether the students have understood the previously learned knowledge, single-choice or Kprim questions with a clear answer are suitable (Example: What is the definition of the Sharpe ratio?). To activate students’ engagement, questions can be asked without a clear answer. This makes students think about the discussed topic  being covered and gets them directly involved (Example: Where will the SMI be at the end of 2025?). For more didactical information please consult the [use cases](/use_cases) or [UZH Teaching Tools](https://teachingtools.uzh.ch/).
 
 Questions can be grouped and/or stacked for sequential presentation. Sample solutions and explanations can be provided for all question types, while answer-specific feedback is currently limited to choice-based questions. Questions can be graded automatically and yield points for successful completion. Customizable weighting (e.g., to separate easy and difficult questions) can be applied through a multiplier (x1, x2, x3, x4) that will impact the amount of points accumulated.
 
