--- a/apps/frontend-pwa/android/app/src/main/res/values/strings.xml
+++ b/apps/frontend-pwa/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">KlickerUZH</string>
     <string name="title_activity_main">KlickerUZH</string>
-    <string name="package_name">ch.uzh.klicker.pwa</string>
-    <string name="custom_url_scheme">ch.uzh.klicker.pwa</string>
+    <string name="package_name">ch.uzh.bf.klicker.pwa</string>
+    <string name="custom_url_scheme">ch.uzh.bf.klicker.pwa</string>
 </resources>
