--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -6,7 +6,7 @@
   ],
   "devDependencies": {
     "@tsconfig/node18": "18.2.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/recommended": "1.0.3",
     "typescript": "5.0.4"
   },
   "peerDependencies": {
