--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "extends": [
-    "@tsconfig/node18/tsconfig.json",
-    "@tsconfig/recommended/tsconfig.json"
-  ],
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "resolveJsonModule": true
-  }
+  "extends": "@tsconfig/node18/tsconfig.json"
 }
