enhance: add catalyst tag to corresponding features on documentation pages

--- a/apps/docs/docs/tutorials/group_activity.mdx
+++ b/apps/docs/docs/tutorials/group_activity.mdx
@@ -1,5 +1,10 @@
 ---
 title: Activity - Group Activity
+hide_title: true
 ---
+
+import CatalystTitle from '../../src/components/CatalystTitle'
+
+<CatalystTitle title="Activity - Group Activity" />
 
 > COMING SOON
