--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -1,6 +1,11 @@
 ---
 title: Activity - Practice Quiz
+hide_title: true
 ---
+
+import CatalystTitle from '../../src/components/CatalystTitle'
+
+<CatalystTitle title="Activity - Practice Quiz" />
 
 ## What is a Practice Quiz?
 
@@ -8,10 +13,23 @@ title: Activity - Practice Quiz
 
 The Practice Quiz activity consists of longer question sets that specifically target modules or topics and that can be embedded within Learning Management Systems (LMS) like OpenOLAT. These learning activities have no restrictions on when or how often they can be completed. Furthermore, the questions within each set can be shown in sequence, shuffled, or ordered based on the date of the last response. When using gamification, the time frame in which points can be collected from responding to the questions can be customized to, e.g., once a week or day.
 
-
 ## How can I create a Practice Quiz?
 
-<iframe id="kmsembed-0_6ewauv5u" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_6ewauv5u/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Prepare Practice Quiz"></iframe>
+<iframe
+  id="kmsembed-0_6ewauv5u"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_6ewauv5u/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Prepare Practice Quiz"
+></iframe>
 
 **Add a description:**
 
@@ -23,7 +41,7 @@ The Practice Quiz activity consists of longer question sets that specifically ta
 
 4. Course: In this field, the Practice Quiz has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the Course Management tutorial (verlinken).
 5. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated .
-6. Repetition interval: Practice Quizzes are characterized by their spaced repetition. Here, the period  is chosen after which the participants can repeat the Quiz.
+6. Repetition interval: Practice Quizzes are characterized by their spaced repetition. Here, the period is chosen after which the participants can repeat the Quiz.
 7. Order: The order in which the questions are to be solved by the participants is selected here. It is possible to choose between the following setups: Last response first, sequential or shuffled.
 
 **Choose your questions:**
@@ -35,17 +53,30 @@ For this step, existing questions are required. Note that for Microlearning and 
 
 **End of preparation:**
 
-10.	With a click on Create your first Practice Quiz is prepared!
-
+10. With a click on Create your first Practice Quiz is prepared!
 
 ## How can I publish a Practice Quiz and make it accessible to participants?
 
-<iframe id="kmsembed-0_afublry9" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_afublry9/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Publish Practice Quiz"></iframe>
+<iframe
+  id="kmsembed-0_afublry9"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_afublry9/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Publish Practice Quiz"
+></iframe>
 
 1. After you create a Practice Quiz, you can find it under Courses. Then select the course to which you added the session.
 2. In the course you have multiple options. You can...
-    - ...copy the access link and provide it to your participants.
-    - ...edit your session before publishing it.
-    - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
-    - ...delete your session.
+   - ...copy the access link and provide it to your participants.
+   - ...edit your session before publishing it.
+   - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
+   - ...delete your session.
 3. After publishing your session, your participants can see the session in their account by joining the course. In the app, the Practice Quiz is displayed to the participants as shown in the screenshots below.
