--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -1,15 +1,33 @@
 ---
 title: Activity - Microlearning
+hide_title: true
 ---
+
+import CatalystTitle from '../../src/components/CatalystTitle'
+
+<CatalystTitle title="Activity - Microlearning" />
 
 ## What is a Microlearning?
 
 Microlearning offers short learning units with a limited number of questions, published at specific intervals to counteract the forgetting curve. Students can test themselves, refresh their knowledge, and integrate learning into their everyday lives regardless of time and place.
 
-
 ## How can I create a Microlearning?
 
-<iframe id="kmsembed-0_wd8q4cfm" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_wd8q4cfm/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Prepare Microlearning"></iframe>
+<iframe
+  id="kmsembed-0_wd8q4cfm"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_wd8q4cfm/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Prepare Microlearning"
+></iframe>
 
 **Add a description:**
 
@@ -25,7 +43,7 @@ Microlearning offers short learning units with a limited number of questions, pu
 
 **Choose your questions:**
 
-For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based questions can be implemented.  If you need help with creating questions, please review the Question Management tutorial (verlinken).
+For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based questions can be implemented. If you need help with creating questions, please review the Question Management tutorial (verlinken).
 
 7. Questions: The desired question can be added to the session by simply dragging the question onto the plus sign.
 8. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
@@ -34,15 +52,28 @@ For this step, existing questions are required. Note that for Microlearning and 
 
 9. With a click on Create your first Microlearning session is prepared!
 
-
 ## How can I publish a Microlearning and make it accessible to participants?
 
-<iframe id="kmsembed-0_5wx8eehl" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5wx8eehl/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Publish Microlearning"></iframe>
+<iframe
+  id="kmsembed-0_5wx8eehl"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5wx8eehl/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Publish Microlearning"
+></iframe>
 
 1. After you create a Microlearning session, you can find it under Courses. Then select the course to which you added the session.
 2. In the course you have multiple options. You can...
-    - ...copy the access link and provide it to your participants.
-    - ...edit your session before publishing it.
-    - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
-    - ...delete your session.
+   - ...copy the access link and provide it to your participants.
+   - ...edit your session before publishing it.
+   - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
+   - ...delete your session.
 3. After publishing your session, your participants can see the session in their account by joining the course. In the app, the Microlearning session is displayed to the participants as shown in the screenshots below.
