--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -10,7 +10,21 @@ Courses serve as a framework within KlickerUZH, facilitating the integration of 
 
 ## How can I create a course?
 
-<iframe id="kmsembed-0_5uymof4i" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5uymof4i/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Course Preparation"></iframe>
+<iframe
+  id="kmsembed-0_5uymof4i"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_5uymof4i/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Course Preparation"
+></iframe>
 
 1. Starting from the Courses page, you can create a new course. The Course Name and Display Name can be the same or different. While the Course Name is only visible internally and serves for identification purposes, the Display name is what participants will see . If the course is associated with a lecture and/or a course in an LMS, it is recommended to choose the same name.
 
@@ -26,10 +40,23 @@ To access the course overview, you can navigate to the Courses section and selec
 
 For more information on integrating learning activities into courses, refer to the tutorials for live quizzes and live Q&A, as well as Microlearning and Practice Quizzes.
 
-
 ## How can I join a course as a participant?
 
-<iframe id="kmsembed-0_12mphyu5" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_12mphyu5/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Join Course"></iframe>
+<iframe
+  id="kmsembed-0_12mphyu5"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_12mphyu5/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Join Course"
+></iframe>
 
 There are three ways to grant participants access to a course. By clicking on "Join Course" in the top right corner, the options for joining can be accessed:
 
@@ -40,7 +67,6 @@ There are three ways to grant participants access to a course. By clicking on "J
 3. QR Code: To share the QR code, you can either click on "Present QR code" and copy the link (recommended) or take a screenshot of the QR code and share it.
 
 Participants also have the option to participate in activities anonymously without logging in.
-
 
 ## How can I integrate a course with my learning management system (e.g., OLAT)?
 
