--- a/apps/docs/docs/tutorials/live_quiz.mdx
+++ b/apps/docs/docs/tutorials/live_quiz.mdx
@@ -8,10 +8,23 @@ title: Activity - Live Quiz
 
 Live Quizzes in KlickerUZH involve real-time interaction during lectures to foster engagement between the lecturer and students. Multiple question blocks are activated at different intervals, allowing students to provide answers in real-time. Lecturers can view aggregated and anonymous student responses on the dashboard.
 
-
 ## How can I create a Live Quiz?
 
-<iframe id="kmsembed-0_bfzstjdf" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_bfzstjdf/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Live Quiz Preparation"></iframe>
+<iframe
+  id="kmsembed-0_bfzstjdf"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_bfzstjdf/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Live Quiz Preparation"
+></iframe>
 
 **Add a description:**
 
@@ -30,18 +43,31 @@ Live Quizzes in KlickerUZH involve real-time interaction during lectures to fost
 For this step, existing questions are required. If you need help with creating questions, please review the Question Management tutorial (verlinken).
 
 7. There are multiple options how to add a question to a block:
-7.1. Drag: The desired question can be added to a specific block by simply dragging the question onto the plus sign below the desired block.
-7.2. Select: It is also possible to select one or more questions and insert them into the desired block by clicking on the yellow boxes that appear after selecting the questions.
-In this way questions can be grouped and/or stacked for sequential presentation.
+   7.1. Drag: The desired question can be added to a specific block by simply dragging the question onto the plus sign below the desired block.
+   7.2. Select: It is also possible to select one or more questions and insert them into the desired block by clicking on the yellow boxes that appear after selecting the questions.
+   In this way questions can be grouped and/or stacked for sequential presentation.
 
 **End of preparation:**
 
 8. With a click on Create your first Live Quiz is prepared!
 
-
 ## How can I execute a Live Quiz?
 
-<iframe id="kmsembed-0_apxhu5zk" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_apxhu5zk/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Live Quiz Execution"></iframe>
+<iframe
+  id="kmsembed-0_apxhu5zk"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_apxhu5zk/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Live Quiz Execution"
+></iframe>
 
 The prepared Live Quiz can be found under Sessions. Here it is possible to edit the session before it is started. Once Start Session is clicked, the session can no longer be edited. Also note that once Live Quizzes are closed, they cannot be reopened.
 
@@ -55,18 +81,29 @@ Once the session is stared, there are the following steps to take:
 6. Evaluation: Under Evaluation the results and the number of participants for each block and question can be viewed. The display of the results can be customized to the user's preferences. The user can choose between a table or a bar chart to show results, the font size can be adjusted and lastly the solutions can be presented directly in the result chart.
 7. Leaderboard: Only participants who are signed in can appear on the leaderboard and earn points.
 
-
 ## How can I edit a Live Quiz?
 
 It is possible to edit a Live Quiz only before it has been started. Once Start Session is clicked, the session can no longer be edited.
 
-
 ## How can participants join a Live Quiz?
 
-<iframe id="kmsembed-0_l513w0kb" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_l513w0kb/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Join Live Quiz"></iframe>
+<iframe
+  id="kmsembed-0_l513w0kb"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_l513w0kb/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Join Live Quiz"
+></iframe>
 
 Once the session is started, click on the QR code button in the top bar of the session page. You can send the direct link to your participants or show them the QR code (Present QR code displays the QR code on a separate page).
-
 
 ## What should I look out for when creating a gamified Live Quiz?
 
