--- a/apps/docs/docs/tutorials/question_management.mdx
+++ b/apps/docs/docs/tutorials/question_management.mdx
@@ -11,10 +11,23 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
 1. There are 5 different question types: Single Choice (SC), Multiple Choice (MC), Essay/Free Text(FT), Numerical Response (NR), and Kprim (KP).
 2. A pedagogical reflection should precede the creation of questions, as different question types may be more appropriate for different learning settings or learning goals. For more pedagogical considerations, refer to use cases or to: https://teachingtools.uzh.ch/en/tools/multiple-choice-co-aufgaben-erstellen
 
-
 ## How can I create a question?
 
-<iframe id="kmsembed-0_c4db0dw8" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_c4db0dw8/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Question Preparation"></iframe>
+<iframe
+  id="kmsembed-0_c4db0dw8"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_c4db0dw8/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Question Preparation"
+></iframe>
 
 1. The question title is visible to participants and should offer an idea about the subject of the question.
 2. Questions can be valued weighted differently using a multiplier. A multiplier awards a correct answer with either x1, x2, x3, or x4 points, if the question is applied within a gamified context.
@@ -24,15 +37,28 @@ Questions serve as the fundamental building blocks of KlickerUZH. The question p
 6. For Numerical Questions, hints regarding the range of the number can be provided under Options. Additionally, the precision option allows specifying the desired number of decimal places, including whether rounding should be applied.
 7. The preview section demonstrates how the questions will appear to participants. Choice-based questions can be displayed either in a list format or as a grid.
 
-
 ## How can I manage created questions (e.g., edit, search, sort)?
 
-<iframe id="kmsembed-0_gm5oobzo" width="100%" height="400" src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_gm5oobzo/uiConfId/23448425/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="KlickerUZH - Question Management"></iframe>
+<iframe
+  id="kmsembed-0_gm5oobzo"
+  width="100%"
+  height="400"
+  src="https://uzh.mediaspace.cast.switch.ch/embed/secure/iframe/entryId/0_gm5oobzo/uiConfId/23448425/st/0"
+  class="kmsembed"
+  allowfullscreen
+  webkitallowfullscreen
+  mozAllowFullScreen
+  allow="autoplay *; fullscreen *; encrypted-media *"
+  referrerPolicy="no-referrer-when-downgrade"
+  sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+  frameborder="0"
+  title="KlickerUZH - Question Management"
+></iframe>
 
 Since questions can be integrated into various learning activities and reused multiple times, understanding how to edit and arrange them is crucial.
 
 1. Questions can be grouped based on tags and It is possible to search for question titles in the search field.
-2. Questions can be listed by creation date or by title (alphabetically, from  a -> z or from z -> a)
+2. Questions can be listed by creation date or by title (alphabetically, from a -> z or from z -> a)
 3. Questions can be edited, duplicated (and subsequently edited), and deleted. However, any edits made to questions will not affect their status in ongoing implementations within various learning activities. Deleted questions cannot be restored, but they will persist within existing sessions.
 4. To keep the question pool organized, there is the option to archive questions and retrieve them from the archive at a later time.
 5. Questions are the basic building blockof of the 4 learning activities. Most questions can be used in any of the 4 activities, but some restrictions apply. For more details about embedding questions into different learning activities, please refer to the tutorial/workflow section Learning Activities.
