--- a/apps/docs/docs/tutorials/delegated_access.mdx
+++ b/apps/docs/docs/tutorials/delegated_access.mdx
@@ -10,7 +10,7 @@ Delegated access is often useful for teaching assistans of a course, who can the
 
 ## How can I create a delegated access login for my account?
 
-In order to create a delegated access login for your account, open the [user settings](https://manage.klicker.uzh.ch/user/settings) or click on your shortname in the lecturer frontend. Under the corresponding section, you can now specify a name for the login and the access level as shown in the screenshot below. The name will only be used for your own reference and to distinguish different logins.
+In order to create a delegated access login for your account, open the [user settings](https://manage.klicker.uzh.ch/user/settings) or click on your shortname in the lecturer frontend and select `Settings`. Under the corresponding section (`Delegated Access`), you can now specify a name for the login and the access level as shown in the screenshot below. The name will only be used for your own reference and to distinguish different logins.
 
 Note that the username of the delegated login will be the shortname of your account and the password is auto-generated. You can generate a different password by clicking the corresponding button. In any case, the password will be displayed only once, so make sure to copy it to a safe place before closing the view.
 
