--- a/apps/docs/docs/student_tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/student_tutorials/practice_quiz.mdx
@@ -4,7 +4,7 @@ title: Practice Quiz - Student View
 
 ![Practice Quiz in OLAT](/img_v3/07_practice_quiz.png)
 
-Beyond the setting of live quizzes, KlickerUZH also offers a variety of asynchronous learning activities. One of them is the practice quiz. Practice quizzes are a great way to repeat the course content and to prepare for an exam.
+Beyond the setting of live quizzes, KlickerUZH also offers a variety of asynchronous learning activities. One of them is the practice quiz. Practice quizzes are a great way to repeat the course content and to prepare for an exam. This section describes the student view of practice quiz elements, to create them, check out the [corresponding section](/tutorials/practice_quiz).
 
 They can, for example, be used as part of an e-learning or as blended learning components in the KlickerUZH app. Practice quizzes are created by the lecturers and can be used by the students at any time. They can be repeated arbitrarily often. Points are only awarded for the first attempt and repetitions after certain time intervals (setting of the lecturer).
 
