wip: add information on student account updates

--- a/apps/docs/docs/student_tutorials/student_accounts.mdx
+++ b/apps/docs/docs/student_tutorials/student_accounts.mdx
@@ -32,3 +32,9 @@ If students are participating in a course with KlickerUZH for the first time, th
 
 In general, it is also possible to participate anonymously in all elements of KlickerUZH. For live quizzes, students can find an overview of all running instances of a course through the lecturers shortname: `https://pwa.klicker.uzh.ch/join/{shortname}`
 Practice quizzes and microlearning are available via direct links visible to the lecturers. When accessing KlickerUZH via the OLAT integration, students can choose to create an account and will thereafter be logged in automatically. If they do not have a KlickerUZH account, a participation in practice quizzes will remain anonymous.
+
+## Updating the account
+
+After creation, students can update their password, avatar and other settings at any time or delete their account completely through a corresponding designated view. To access this view, students can simply click on their avatar in the top right corner.
+
+![](/img_v3/02_edit_profile.png)
