--- a/apps/docs/docs/student_tutorials/student_accounts.mdx
+++ b/apps/docs/docs/student_tutorials/student_accounts.mdx
@@ -1,5 +1,5 @@
 ---
-title: Student Accounts
+title: Participant Accounts
 ---
 
 If students are participating in KlickerUZH activities for the first time, they can register for a KlickerUZH participant account. A KlickerUZH participant account allows them to easily manage and access the learning content of courses using KlickerUZH, as well as to add important elements to their private repetition library and participate in the gamified elements of courses.
