--- a/apps/docs/docs/student_tutorials/live_quiz.mdx
+++ b/apps/docs/docs/student_tutorials/live_quiz.mdx
@@ -2,7 +2,7 @@
 title: Live Quiz - Student View
 ---
 
-Live quizzes are one of the core functionalities of KlickerUZH. In the following, you find an overview of the student view components of live quiz and live Q&A. For more information on how to use these components as a lecturer, check out the turotials for [live quiz](/tutorials/live_quiz) and [live Q&A](/tutorials/live_qa), respectively.
+Live quizzes are one of the core functionalities of KlickerUZH. In the following, you find an overview of the student view components of live quiz and live Q&A. For more information on how to use these components as a lecturer, check out the tutorials for [live quiz](/tutorials/live_quiz) and [live Q&A](/tutorials/live_qa), respectively.
 
 #### Polls and Live Quizzes
 
