chore: replace department name and email adresses

--- a/apps/docs/docs/datenschutz.mdx
+++ b/apps/docs/docs/datenschutz.mdx
@@ -77,7 +77,7 @@ Institut für Banking und Finance <br />
 Teaching Center, KlickerUZH <br />
 Plattenstrasse 14 <br />
 8032 Zürich <br />
-klicker@bf.uzh.ch
+klicker@df.uzh.ch
 
 Wir weisen darauf hin, wenn es im Einzelfall andere Verantwortliche für die Bearbeitung von Personendaten gibt.
 
