--- a/apps/docs/docs/privacy_policy.mdx
+++ b/apps/docs/docs/privacy_policy.mdx
@@ -79,7 +79,7 @@ Institute for Banking and Finance <br />
 Teaching Center, ClickerUZH <br />
 Plattenstrasse 14 <br />
 8032 Zurich <br />
-klicker@bf.uzh.ch
+klicker@df.uzh.ch
 
 We point out if there are other persons responsible for the processing of personal data in individual cases.
 
